--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
+cargo-features = ["edition2021"]
 [package]
 name = "ips-patch"
 version = "0.0.0"
-authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>"]
+authors = ["Craig M. Brandenburg <c.m.brandenburg@gmail.com>", "Anthony Cicchetti <me@purpleonthe.cloud>"]
+edition = "2021"
 
 [dependencies]
-docopt = "0.6"
-rustc-serialize = "0.3"
+structopt = "0.3"
+eyre = "0.6"
+thiserror = "1.0"
